continuing JS ebook

--- a/website/projects/learning-js/ebook.html
+++ b/website/projects/learning-js/ebook.html
@@ -36,6 +36,7 @@
 		<p>i learned about declaring variables aka <code>var</code> and assigning it a string!</p>
 		<p>example: <code>var cat = "black with white socks"</code></p>
 		<p>and if i wanna do another string to the same <code>var</code> i can go <code>cat = "orange and white"</code></p>
+		<p>i can also use <code>let</code> for this</p>
 
 		<h2>chapter 3: numbers</h2>
 		<p>07.mar.24</p>
@@ -62,8 +63,19 @@ document.getElementById("cookies").innerHTML = totalCookiesIveEaten;
 
 		<h2>chapter 6: math expressions: unfamiliar operators</h2>
 		<p><i>31.mar.24</i></p>
-		<p>learning about <code>x++</code> and <code>x--</code>. in action</p>
+		<p>learning about <code>x++</code> and <code>x--</code></p>
 		<p>good lord this one was a bit confusing....</p>
+		<p>okay so <code>num++;</code> is a short way of writing <code>num = num + 1;</code></p>
+		<p>but then when used in this example it confuses me so much... bc to me this makes no sense <img src="/!g/pix/emote1crying.gif" alt=""></p>
+		<img src="!g/240201.jpg" width="90%" alt="screenshot from the ebook">
+		<p>i just dont get how <i>"the 2nd statement boots its value to 2."</i> and yet <code>newnum</code> gets the original value of 1. that's what i'm having trouble wrapping my head around...</p>
+		<p>maybe i'll get it in the long run LOL.</p>
+
+		<h2>chapter 7: math expressions: eliminating ambiguity</h2>
+		<hr>
+		<h2>other notes</h2>
+		<p>array: <code>let order = ["first", "second", "third"];
+			</code></p>
 	</main>
 
 	<footer>
