button wall update

--- a/website/sites/index.html
+++ b/website/sites/index.html
@@ -181,6 +181,11 @@
 			<a title="fairygore - magical site! it makes me feel like i am lost in a forest" href="https://fairygore.neocities.org" target="_blank"><img src="!g/fairygore.png" alt="fairygore"></a>
 			<a title="ames" href="https://tthumbelina.neocities.org/" target="_blank"> <img src="!g/tthumbelina.GIF"></a>
 			<a href="hidingspot.neocities.org" target="_blank"><img src="https://hidingspot.neocities.org/imgs/hidingspot-sitebutton.gif" alt="hidingspot's site button"></a>
+			<a title="ita.toys - such a FUN site. this is what having graphic design as your passion truly looks like" href="https://ita.toys" target="_blank"><img src="!g/ita.toys.gif" alt="ita.toys"></a>
+			<a title="fruitgummie" href="https://fruitgummie.neocities.org/" target="_blank"><img src="!g/fruitgummie.gif" alt="fruitgummie"></a>
+			<a title="shydeer" href="https://shydeer.neocities.org" target="_blank"><img src="!g/shydeer.png" alt="shydeer"></a>
+			<a title="pameluft" href="https://pameluft.neocities.org" target="_blank"><img src="!g/pameluft.gif" alt="pameluft"></a>
+
 		</div>
 
 		<h4>sites without buttons (<a href="mailto:doqmeat@gmail.com" target="_blank">e-mail me</a> if you do have one!)</h4>
@@ -226,7 +231,6 @@
 			<a href="https://hydrangeagarden.neocities.org" target="_blank"><img src="!g/hydrangeagarden.gif"></a>
 			<a href="https://voyager.neocities.org" target="_blank"><img src="!g/voyager.png"></a>
 			<a href="https://softsnow.neocities.org" target="_blank"><img src="!g/softsnow.png"></a>
-			<a href="https://ita.toys" target="_blank"><img src="!g/ita.toys.gif"></a>
 			<a title="dimden - programmer! they have lots of cool stuff too." href="https://dimden.dev/" target="_blank"><img src="https://dimden.dev/services/images/88x31.gif"></a>
 			<a title="a website that is all about cats! i love this one a lot" href="https://nekonokuni.neocities.org" target="_blank"><img src="!g/nekonokuni.gif"></a>
 			<a href="https://lu.tiny-universes.net/index2.html" target="_blank"><img src="!g/lu.tiny.gif"></a>
@@ -257,8 +261,6 @@
 			<a title="velvet blue" href="https://humanityisnotbeautiful.neocities.org"><img src="https://files.catbox.moe/vltthb.png" alt="Velvet Blue"></a>
 			<a title="lexi" href="https://lexiqqq.com/" target="_blank"><img src="https://www.lexiqqq.com/assets/img/button_4.gif" alt="lexi"></a>
 			<a title="nyabla" href="https://nyabla.net" target="_blank"><img src="!g/nyabla.png" alt="nyabla"></a>
-			<a href="https://shydeer.neocities.org" target="_blank"><img src="!g/shydeer.png" alt="shydeer"></a>
-			<a href="https://pameluft.neocities.org" target="_blank"><img src="!g/pameluft.gif" alt="pameluft"></a>
 			<a href="https://decodreams.neocities.org" target="_blank"><img src="!g/decodreams.gif" alt="decodreams"></a>
 			<a href="https://ajiyuu.neocities.org" target="_blank"><img src="!g/ajiyuu.jpeg" alt="ajiyuu"></a>
 		</div>
