changed ebook to js index

--- a/website/projects/index.html
+++ b/website/projects/index.html
@@ -35,7 +35,7 @@
 				</ul>
 			</ul>
 			<h2 style="margin:3px;">misc</h2>
-			<a href="learning-js/ebook.html">learning javascript</a> - documenting my process of learning JS
+			<a href="learning-js/index.html">learning javascript</a> - documenting my process of learning JS
 		</main>
 		<footer>
 			<p>....... <a title="go back home" href="/home">ᓚᘏᗢ</a> .......</p>
