--- a/website/projects/learning-js/index.html
+++ b/website/projects/learning-js/index.html
@@ -23,22 +23,23 @@
 </head>
 
 <body>
-	<h1>a smarter way to learn javascript</h1>
+	<h1>i'm learning javascript</h1>
 	<main>
+		<h2>a smarter way to learn javascript</h2>
 		<p>my journey of using an e-book called <i>a smarter way of learning JS</i> to learn... (drumroll) javascript.</p>
 		<p>here's a link to the <a href="https://github.com/atifjamal360/Books/blob/master/A-Smarter-Way-to-Learn-JavaScript-The-new-approach-that-uses-technology-to-cut-your-effort-in-half.pdf" target="_blank">pdf</a> that i am using!</p>
-		<h2>chapter 1</h2>
+		<h3>chapter 1</h3>
 		<p>okay so i am learning stuff for alerts it's like this:</p>
 		<code>alert("this is an alert!");</code>
 
-		<h2>chapter 2: declaring variables</h2>
+		<h3>chapter 2: declaring variables</h3>
 		<p>06.mar.24</p>
 		<p>i learned about declaring variables aka <code>var</code> and assigning it a string!</p>
 		<p>example: <code>var cat = "black with white socks"</code></p>
 		<p>and if i wanna do another string to the same <code>var</code> i can go <code>cat = "orange and white"</code></p>
 		<p>i can also use <code>let</code> for this</p>
 
-		<h2>chapter 3: numbers</h2>
+		<h3>chapter 3: numbers</h3>
 		<p>07.mar.24</p>
 		<p>a number is not enclosed in quotes! if it is, JS will read it as a <i>string</i></p>
 		<p>example: <code>var number = 50;</code></p>
@@ -51,17 +52,17 @@ var totalCookiesIveEaten = cookiesIveEaten + 2;
 document.getElementById("cookies").innerHTML = totalCookiesIveEaten;
 			</textarea>
 
-		<h2>chapter 4: variable naming rules</h2>
+		<h3>chapter 4: variable naming rules</h3>
 		<ul>
 			<li>only $, _</li>
 			<li>variable <u>cannot</u> start with a number</li>
 		</ul>
 
-		<h2>chapter 5: math expressions: familiar operators</h2>
+		<h3>chapter 5: math expressions: familiar operators</h3>
 		<p>i can do math with javascript with these <code>- + * /</code></p>
 		<p class="revisit">i am not sure what a <i>modulus</i> (this thing <code>%</code>) exactly does tbh... will search more on this later</p>
 
-		<h2>chapter 6: math expressions: unfamiliar operators</h2>
+		<h3>chapter 6: math expressions: unfamiliar operators</h3>
 		<p><i>31.mar.24</i></p>
 		<p>learning about <code>x++</code> and <code>x--</code></p>
 		<p>good lord this one was a bit confusing....</p>
@@ -71,9 +72,10 @@ document.getElementById("cookies").innerHTML = totalCookiesIveEaten;
 		<p>i just dont get how <i>"the 2nd statement boots its value to 2."</i> and yet <code>newnum</code> gets the original value of 1. that's what i'm having trouble wrapping my head around...</p>
 		<p>maybe i'll get it in the long run LOL.</p>
 
-		<h2>chapter 7: math expressions: eliminating ambiguity</h2>
+		<h3>chapter 7: math expressions: eliminating ambiguity</h3>
 		<hr>
 		<h2>other notes</h2>
+		<p>i'm doing a <a href="https://www.freecodecamp.org/learn/javascript-algorithms-and-data-structures-v8/" target="_blank">freecampcode</a> tutorial project as i read this ebook to put the stuff i'm reading into practice! i'll be putting some notes here that as</p>
 		<p>array: <code>let order = ["first", "second", "third"];
 			</code></p>
 	</main>
