updated currently a bit

--- a/website/home.html
+++ b/website/home.html
@@ -125,9 +125,9 @@ feel free to look around for any help you need :) just don't be THAT person and 
 				fujimoto</p>
 			<p><span class="hl">watching:</span> dungeon meshi</p>
 			<p><span class="hl">listening to:</span> <span id="song">&#8987;</span></p>
-			<p><span class="hl">working on:</span> my apartment (‾◡◝), university, <a href="/projects/learning-js/ebook.html">learning JS</a></p>
+			<p><span class="hl">working on:</span> <a href="/projects/learning-js/index.html">learning JS</a>, uni work</p>
 			<p><span class="hl">coding/writing:</span> journal and planners blog post</p>
-			<p class="date">last updated on 24.mar.24</p>
+			<p class="date">last updated on 01.apr.24</p>
 		</div>
 
 		<div id="updates" class="box">
