added pic to photobook

--- a/website/photobook/index.html
+++ b/website/photobook/index.html
@@ -42,6 +42,14 @@ hiii this is a caption
 -->
 		<!-- 1st column -->
 		<div class="column">
+			<div class="pic digi"><img src="!g/240402-cat.jpg">
+				<div class="hov">
+					<div class="caption">
+						chillin' on top of a car. dick face...
+					</div>
+				</div>
+			</div>
+
 			<div class="pic film"><img src="!g/230220-sunset-1.jpg"><img src="!g/230220-sunset-2.jpg"><img src="!g/230220-sunset-3.jpg">
 				<div class="hov">
 					<div class="caption">
@@ -276,7 +284,7 @@ hiii this is a caption
 	<div id="home"><a title="go back to homepage" href="/home"><img src="/!g/pix/polaroid_5.gif"></a></div>
 
 	<footer>
-		please <u>don't</u> use my pics without my permission! <img src="/!g/pix/cam-shoot.gif"> <b>last updated: 03.dec.23</b>
+		please <u>don't</u> use my pics without my permission! <img src="/!g/pix/cam-shoot.gif"> <b>last updated: 03.apr.24</b>
 		<br>
 		<b>credit:</b> bg by <a href="http://sozaioukoku.fc2web.com/index.html" target="_blank">sozaioukoku</a> / header font by <a href="https://www.dafont.com/growing-garden-script.font" target="_blank">helotype</a>
 		<br>
