button wall updated

--- a/website/sites/index.html
+++ b/website/sites/index.html
@@ -185,6 +185,7 @@
 			<a title="fruitgummie" href="https://fruitgummie.neocities.org/" target="_blank"><img src="!g/fruitgummie.gif" alt="fruitgummie"></a>
 			<a title="shydeer" href="https://shydeer.neocities.org" target="_blank"><img src="!g/shydeer.png" alt="shydeer"></a>
 			<a title="pameluft" href="https://pameluft.neocities.org" target="_blank"><img src="!g/pameluft.gif" alt="pameluft"></a>
+			<a target="_blank" href="https://kwaamfan.neocities.org/"><img src="https://files.catbox.moe/egpfu7.gif"></a>
 
 		</div>
 
