updated learning JS

--- a/website/projects/learning-js/index.html
+++ b/website/projects/learning-js/index.html
@@ -25,6 +25,9 @@
 <body>
 	<h1>i'm learning javascript</h1>
 	<main>
+	<p>i'm taking notes as i go through tutorials and read info <img src="/!g/pix/emoteoneourple.gif"> my <a href="practice.html">practice page</a> where i put what i've learned into practice.</p>
+		<nav><img src="/!g/pix/starblue.gif" alt=""> navigation: <a href="#smarter">a smarter way to learn JS</a>, <a href="#freecodecamp-1">freecodecamp exercise 1</a></nav>
+		<hr>
 		<h2>a smarter way to learn javascript</h2>
 		<p>my journey of using an e-book called <i>a smarter way of learning JS</i> to learn... (drumroll) javascript.</p>
 		<p>here's a link to the <a href="https://github.com/atifjamal360/Books/blob/master/A-Smarter-Way-to-Learn-JavaScript-The-new-approach-that-uses-technology-to-cut-your-effort-in-half.pdf" target="_blank">pdf</a> that i am using!</p>
@@ -74,10 +77,13 @@ document.getElementById("cookies").innerHTML = totalCookiesIveEaten;
 
 		<h3>chapter 7: math expressions: eliminating ambiguity</h3>
 		<hr>
-		<h2>other notes</h2>
-		<p>i'm doing a <a href="https://www.freecodecamp.org/learn/javascript-algorithms-and-data-structures-v8/" target="_blank">freecampcode</a> tutorial project as i read this ebook to put the stuff i'm reading into practice! i'll be putting some notes here that as</p>
-		<p>array: <code>let order = ["first", "second", "third"];
-			</code></p>
+		<h2>freecampcode : JS Algorithms and Data Structures</h2>
+		<h3>learn basic JS by building a RPG</h3>
+		<p>i'm doing a <a href="https://www.freecodecamp.org/learn/javascript-algorithms-and-data-structures-v8/" target="_blank">freecampcode</a> tutorial project as i read this ebook to put the stuff i'm reading into practice! i'll be putting some notes here that as well.</p>
+		<p>array: <code>let order = ["first", "second", "third"];</code></p>
+		<p>ids and classes go in quotes "" ... took me a minute or 2 trying to figure this out in the excersise LOL</p>
+		<p>you can also declare variables with <code>let</code>, use <code>const</code> for variables that don't need to be reassigned</p>
+		<p>you can change text inside an element with <code>innerText</code></p>
 	</main>
 
 	<footer>
