--- a/website/sites/index.html
+++ b/website/sites/index.html
@@ -186,6 +186,7 @@
 			<a title="shydeer" href="https://shydeer.neocities.org" target="_blank"><img src="!g/shydeer.png" alt="shydeer"></a>
 			<a title="pameluft" href="https://pameluft.neocities.org" target="_blank"><img src="!g/pameluft.gif" alt="pameluft"></a>
 			<a target="_blank" href="https://kwaamfan.neocities.org/"><img src="https://files.catbox.moe/egpfu7.gif"></a>
+			<a title="popisbubble" href="https://popisbubbles.neocities.org"><img src="!g/popisbubbles.gif" alt="popisbubbles"></a>
 
 		</div>
 
