minor change to practice page
added date

--- a/website/projects/learning-js/practice.html
+++ b/website/projects/learning-js/practice.html
@@ -61,9 +61,11 @@ function revertPa1() {
 	</main>
 
 	<footer>
+		last updated: <b>03.apr.24</b>
+		<br>
 		....... ᓚᘏᗢ .......
 		<br>
-		<a href="/projects">projects</a> / <a href="/home">home</a> / <a href="#">top</a>
+		<a href="/projects/learning-js/index.html">learning JS</a> / <a href="/home">home</a> / <a href="#">top</a>
 	</footer>
 	<script src="practice.js"></script>
 </body>
