--- a/website/home.html
+++ b/website/home.html
@@ -66,7 +66,7 @@ feel free to look around for any help you need :) just don't be THAT person and 
 			<a title="everything about the music i love!" href="/music"><img src="/!g/pix/sorahanamuu1.gif" alt=""> music</a>
 
 			<h3>misc</h3>
-			<a href="/projects"><img src="/!g/pix/sticky.gif" alt=""> web projects</a>
+			<a href="/projects"><img src="/!g/pix/sticky.gif" alt=""> web projects <img src="/!g/pix/new1.gif"></a>
 			<a href="/masaaki-yuasa"><img src="/!g/pix/tv.gif"> masaaki yuasa watchlist</a>
 			<a href="/october-movies"><img src="/!g/pix/gaikotsu2.gif"> october movie log</a>
 			<a href="safe-spot/index.html"><img src="/!g/pix/flowerpink.gif" alt=""> safe spot</a>
