the learning js saga continues

--- a/website/projects/learning-js/practice.html
+++ b/website/projects/learning-js/practice.html
@@ -22,46 +22,26 @@
 			margin-top: 10px;
 		}
 
+		p img {
+			max-height: 273px;
+		}
+
 	</style>
 </head>
 
 <body>
 	<h1>practice page</h1>
 	<main>
-		<p id="pa1">today i learned how to make a button to change the text of something! yay</p>
-		<button id="button1">change text</button>
-		<textarea>
-const button1 = document.querySelector("#button1");
+		<p id="pa1">i learned how to change things with a button<br><img src="/collection/cats/!g/puter-cat.jpg"></p>
+		<button id="button1">click me to meow</button>
 
-const pa1 = document.querySelector("#pa1");
-
-button1.onclick = changePa1;
-
-function changePa1() {
-	pa1.innerText = "meow :3";
-
-	button1.innerText = "meow!!!!!";
-
-	button1.onclick = revertPa1;
-}
-
-function revertPa1() {
-	pa1.innerText = "okay i'm normal";
-
-	button1.innerHTML = "meow again?";
-
-	button1.onclick = changePa1;
-}
-
-		</textarea>
 		<hr>
-
 
 
 	</main>
 
 	<footer>
-		last updated: <b>03.apr.24</b>
+		last updated: <b>05.apr.24</b>
 		<br>
 		....... ᓚᘏᗢ .......
 		<br>
