--- a/website/home.html
+++ b/website/home.html
@@ -123,17 +123,17 @@ feel free to look around for any help you need :) just don't be THAT person and 
 			<p><span class="hl">playing:</span> <a href="/vgs/paranormasight">paranormasight</a>, <a href="/vgs/prsk">project sekai</a></p>
 			<p><span class="hl">reading:</span> <i>the guy she was interested in wasn't a guy at all</i> by sumiko arai, <i>chainsaw man</i> by tatsuki
 				fujimoto</p>
-			<p><span class="hl">watching:</span> dungeon meshi</p>
+			<p><span class="hl">watching:</span> dungeon meshi, twin peaks, dead end: paranormal park</p>
 			<p><span class="hl">listening to:</span> <span id="song">&#8987;</span></p>
 			<p><span class="hl">working on:</span> <a href="/projects/learning-js/index.html">learning JS</a>, uni work</p>
 			<p><span class="hl">coding/writing:</span> journal and planners blog post</p>
-			<p class="date">last updated on 01.apr.24</p>
+			<p class="date">last updated on 07.apr.24</p>
 		</div>
 
 		<div id="updates" class="box">
 			<h2>updates</h2>
+			<li>07.apr.24 - updated featured section in <a href="/music">music</a></li>
 			<li>03.apr.24 - new pic on <a href="photobook/index.html">photobook</a> + last update to march <a href="scrapbook/2024/index.html#mar">scrapbook</a> + created a <a href="/projects/learning-js/practice.html">practice page</a> for JS + new <a title="drippin's beautiful maze" href="/music/listening-log/2024/spring.html#2">listening log</a></li>
-			</li>
 			<li>29.mar.24 - site is now part of the <a href="https://silly.city" target="_blank" class="outlink">silly.city</a> webring!</li>
 			<li>25.mar.24 - new <a title="custom domain" href="/journal">journal</a> log!</li>
 			<li>24.mar.24 - added <a title="previously hosted on github pages" href="/projects">web projects</a> + created <a href="/music/listening-log/2024/spring.html">spring listening log</a></li>
