updated featured song & album

--- a/website/music/featured.html
+++ b/website/music/featured.html
@@ -77,7 +77,23 @@ iframe2
 -->
 		<details open>
 			<summary>
-				<span class="date">24.feb.24 - ? : aqua / dead girl dubstep EP</span>
+				<span class="date">07.apr.24 - ? : satisfied / 陽​の​か​け​ら </span>
+			</summary>
+			<table>
+				<td class="t-left">
+					<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/vPFvnqpuFl0?si=jiczeKGnlRU9pAKQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+					such a nice song to jam to <small>(i wish it was longer!!!)</small>
+				</td>
+				<td class="t-right">
+					<iframe style="border: 0; width: 100%; height: 120px;" src="https://bandcamp.com/EmbeddedPlayer/album=1054088397/size=large/bgcol=333333/linkcol=4ec5ec/tracklist=false/artwork=small/transparent=true/" seamless><a href="https://eneiongaku.bandcamp.com/album/-">陽のかけら by inuha</a></iframe>
+					a gorgeous and dreamy ep that uses hatsune miku for its vocals and a mix of shoegaze and dreampop / ambient pop for it's instrumentals.
+				</td>
+			</table>
+		</details>
+
+		<details>
+			<summary>
+				<span class="date">24.feb.24 - 07.apr.24 : aqua / dead girl dubstep EP</span>
 			</summary>
 			<table>
 				<td class="t-left">
