--- a/website/music/index.html
+++ b/website/music/index.html
@@ -29,8 +29,8 @@
 		</header>
 		<div id="scroll">
 			<marquee behavior="scroll" onmouseover="this.stop()" onmouseout="this.start()">
+				<b>07.apr.24</b> - updated featured section! /
 				<b>24.mar.24</b> - <a href="listening-log/2024/spring.html">spring listening log</a> is here!
-				<b>17.mar.24</b> - big update to <a href="listening-log/2024/winter.html">2024 winter</a> listening log! before winter ends officially ... lol
 			</marquee>
 		</div>
 
@@ -88,17 +88,17 @@
 		<div id="featured" class="box">
 			<h4>featured song &amp; album</h4>
 			<div class="song">
-				<b>aqua</b> by jo1
-				<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/orrOpNjC0bc?si=ywUftuMjgd39pBba" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-				<p>this was love at first listen. this is technically jpop.... since they are a japanese pop boy group... but i also consider them to be a kpop group. anyway. I MISSED THIS future house sound soo much in kpop. it was super refreshing to hear this from my newly released tab! it's so good, first hit of the year.</p>
+				<b>satisfied</b> by kim wooseok
+				<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/vPFvnqpuFl0?si=jiczeKGnlRU9pAKQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+				<p>such a nice song to jam to, i just wish it was a bit longer!</p>
 			</div>
 			<div class="lp">
-				<b>dead girl dubstep EP</b> by erbatur999
-				<iframe style="border: 0; width: 100%; height: 120px;" src="https://bandcamp.com/EmbeddedPlayer/album=3020021047/size=large/bgcol=ffffff/linkcol=e99708/tracklist=false/artwork=small/transparent=true/" seamless><a href="https://futureisfailed.bandcamp.com/album/dead-girl-dubstep-ep">dead girl dubstep EP by erbatur999</a></iframe>
-				<p>a fun new EP from one of my favorite electronic artists filled with energetic remixes, most of them from siinamota!</p>
+				<b>陽​の​か​け​ら </b> by inuha
+				<iframe style="border: 0; width: 100%; height: 120px;" src="https://bandcamp.com/EmbeddedPlayer/album=1054088397/size=large/bgcol=333333/linkcol=4ec5ec/tracklist=false/artwork=small/transparent=true/" seamless><a href="https://eneiongaku.bandcamp.com/album/-">陽のかけら by inuha</a></iframe>
+				<p>a gorgeous and dreamy ep that uses hatsune miku for its vocals and a mix of shoegaze and dreampop / ambient pop for it's instrumentals.</p>
 			</div>
 			<hr>
-			<center>past featured music can be found <a href="featured.html">here</a>!</center>
+			<center><small>past featured music can be found <a href="featured.html">here</a></small></center>
 		</div>
 
 		<!-- is he listening-->
