minor fixes to listening log index

--- a/website/music/listening-log/index.html
+++ b/website/music/listening-log/index.html
@@ -12,19 +12,7 @@
 	<!-- tooltip shit -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7/jquery.min.js"></script>
 	<script src="/!f/tooltip-jquary.js"></script>
-	<script>
-		(function($) {
-			$(document).ready(function() {
-				$("[title]").style_my_tooltips({
-					tip_follows_cursor: true,
-					tip_delay_time: 10,
-					tip_fade_speed: 10,
-					attribute: "title"
-				});
-			});
-		})(jQuery);
-
-	</script>
+	<script src="/!f/tooltip.js"></script>
 	<!--  end of tooltip shit -->
 	<style>
 		details p {
@@ -39,7 +27,7 @@
 		<h2>listening logs</h2>
 		<p>these will usually be first time listens but i will mention if it isn't otherwise.</p>
 		<p>these logs are basically a more fleshed out version of my <a href="https://rateyourmusic.com/doqmeat" target="_blank">RYM</a> yearly logs</p>
-		<p><b>21.mar.24</b> - i used to do these on a monthly basis, but because i have less free time now i have been sadly listening to less new stuff compared to previously <img src="/!g/pix/sad.gif" alt=""> because of this i will be separating them based on the seasons of the year</p>
+		<p><small><b>21.mar.24</b> - i used to do these on a monthly basis, but because i have less free time now i cannot update this all the time! <img src="/!g/pix/sad.gif" alt=""> because of this i will be separating them based on the seasons of the year</small></p>
 		<h3>pages</h3>
 		<a href="2024/spring.html" target="_parent">spring 2024</a>
 		<a href="2024/winter.html" target="_parent">winter 2024</a>
