button wall updated

--- a/website/sites/index.html
+++ b/website/sites/index.html
@@ -48,7 +48,6 @@
 			<a title="maalused - has a very cool and mysterious vibe to it!" href="https://maalused.neocities.org" target="_blank"><img src="!g/maalused.gif"></a>
 			<a title="nebula - a site with lots of cool things to read about being queer. also space and purple" href="https://nebula-galaxy.neocities.org" target="_blank"><img src="!g/nebula-galaxy.gif"></a>
 			<a title="river - cute website! can't wait to watch it grow" href="https://optimism.neocities.org" target="_blank"><img src="!g/optimism.png"></a>
-			<a title="rue - very interesting and well written music reviews!" href="https://angelpuppyclub.neocities.org" target="_blank"><img src="!g/angelpuppyclub.gif"></a>
 			<a title="jay - love the aesthetic of this site! the artbooks page is my favorite" href="https://catsoupery.neocities.org" target="_blank"><img src="!g/catsoupery.gif"></a>
 			<a title="hoonis - the most colorful website ever!! whimsical even" href="https://confettiguts.neocities.org" target="_blank"><img src="!g/confettiguts.gif"></a>
 			<a title="ava - very fun layout!" href="https://daintyeco.neocities.org" target="_blank"><img src="!g/daintyeco.gif"></a>
@@ -81,7 +80,6 @@
 			<a title="tsukinio charming site and a inspiration for mine! lovely layout. also i love the button" href="https://komichi.neocities.org" target="_blank"><img src="!g/komichi.png"></a>
 			<a title="fae - FAE!!! fae's website is so fucking cool to me i love this site a whole ton!!!! i love the intricate designs that all of their pages have. im just in awe every time i give em a visit! album shelf + dreams pages are some of my favs. oh did i mention that their art is really cool too? YUP!" href="https://faegardens333.neocities.org" target="_blank"><img src="!g/faegardens333.gif"></a>
 			<a title="princess - very cool site! always has a neat layout" href="https://princss.online" target="_blank"><img src="https://princss.online/media/images/buttons/princss_button.png"></a>
-			<a title="mari - cute and silly" href="https://cardcaptors.neocities.org" target="_blank"><img src="!g/cardcaptors.gif" alt="cardcaptors!"></a>
 			<a title="avery - soft and cozy blog" href="https://isopodz.neocities.org" target="_blank"><img src="https://isopodz.neocities.org/buttons/littleguybutton.jpg" alt="isopodz"></a>
 			<a title="jude - love the video game pages!! very creative way of logging them :)" href="https://blackwater.neocities.org/" target="_blank"><img src="https://blackwater.neocities.org/img/banner2.gif"></a>
 			<a title="harley - very simple but cute blog!" href="https://cherrycloudchiffon.neocities.org" target="_blank"><img src="!g/cherrycloudchiffon.png"></a>
@@ -151,7 +149,6 @@
 			<a title="aubr" href="https://aubr.neocities.org"><img src="https://aubr.neocities.org/aubr.png"></a>
 			<a title="dreambubble - cool site filled with pixels and interesting pages!" href="https://dreambubble.neocities.org/" target="_blank"><img src="!g/dreambubble.gif"></a>
 			<a title="seven - super charming" href="https://halcyyyon.neocities.org/" target="_blank"><img src="!g/halcyyyon.gif"></a>
-			<a title="surge - found on 32bit cafe discord server! very cool and i love the photography page" href="http://doubleincision.com/" target="_blank"><img src="!g/doubleincision.png"></a>
 			<a title="lostlove - cozy site with a nice journal" href="https://lostlove.neocities.org/" target="_blank"><img src="!g/lostlove.gif"></a>
 			<a title="aaron" href="https://applesayce.neocities.org/" target="_blank"><img src="!g/applesayce.gif" alt="applesayce"></a>
 			<a title="mapplebear - a super sweet and cozy site, i especially love their logs about fashion!" href="https://maplebear.neocities.org/" target="_blank"><img src="!g/maplebear.gif" alt="maplebear"></a>
@@ -187,6 +184,8 @@
 			<a title="pameluft" href="https://pameluft.neocities.org" target="_blank"><img src="!g/pameluft.gif" alt="pameluft"></a>
 			<a target="_blank" href="https://kwaamfan.neocities.org/"><img src="https://files.catbox.moe/egpfu7.gif"></a>
 			<a title="popisbubble" href="https://popisbubbles.neocities.org"><img src="!g/popisbubbles.gif" alt="popisbubbles"></a>
+			<a title="caitsith" href="https://caitsith.neocities.org" target="_blank"><img src="!g/caitsith.gif" alt="caitsith"></a>
+			<a title="ribo.zone" href="https://ribo.zone/" target="_blank"><img src="!g/ribose.gif" alt="ribo.zone"></a>
 
 		</div>
 
@@ -257,7 +256,6 @@
 			<a href="https://glassyhouse.neocities.org" target="_blank"><img src="!g/glassyhouse.png"></a>
 			<a href="https://vashti.neocities.org" target="_blank"><img src="!g/vashti.png"></a>
 			<a href="https://www.snifflebear.moe/p/welcome.html" target="_blank"><img src="!g/snifflebear.png" alt="snifflebear.moe"></a>
-			<a href="https://ribo.zone/" target="_blank"><img src="!g/ribose.gif" alt="ribo.zone"></a>
 			<a title="such a cute site with lots of personality" href="https://eggsandmint.neocities.org" target="_blank"><img src="!g/eggsandmint.png" alt="eggsandmint"></a>
 			<a href="https://shrimpfriedeggs.neocities.org/"><img src="https://shrimpfriedeggs.neocities.org/art/mybutton.gif"></a>
 			<a title="velvet blue" href="https://humanityisnotbeautiful.neocities.org"><img src="https://files.catbox.moe/vltthb.png" alt="Velvet Blue"></a>
@@ -369,6 +367,9 @@
 			<a title="nyatchi - such a cute layout" href="https://nyatchi.neocities.org" target="_blank"><img src="!g/nyatchi.gif"></a>
 			<a title="a0i - LOVELY layout designs" href="https://hatsu.neocities.org/" target="_blank"><img src="!g/hatsu.png" alt="hatsu"></a>
 			<a title="kengo - nice and minimalistic site" href="https://kengo.neocities.org/" target="_blank"><img src="!g/kengo.png"></a>
+			<a title="rue - very interesting and well written music reviews!" href="https://angelpuppyclub.neocities.org" target="_blank"><img src="!g/angelpuppyclub.gif"></a>
+			<a title="mari - cute and silly" href="https://cardcaptors.neocities.org" target="_blank"><img src="!g/cardcaptors.gif" alt="cardcaptors!"></a>
+			<a title="surge - found on 32bit cafe discord server! very cool and i love the photography page" href="http://doubleincision.com/" target="_blank"><img src="!g/doubleincision.png"></a>
 		</div>
 
 		<!--box1 end wrapper end div-->
