added more graphics

--- a/website/notebook/sitely/graphics.html
+++ b/website/notebook/sitely/graphics.html
@@ -112,9 +112,12 @@
 		<img src="/!g/pix/cat-music.gif">
 		<img src="/!g/pix/dumy.gif">
 		<img src="/!g/pix/cat-paw.gif">
+		<img src="/!g/pix/cathi.gif">
 
 
 		<br><!-- irregular size -->
+		<img src="/!g/deco/bluecat.gif">
+		<img src="/!g/deco/catonline.gif">
 		<img src="/!g/deco/meowsleepu.gif">
 		<img src="/!g/deco/catrain.gif">
 		<img src="/!g/deco/catblep.gif">
@@ -293,6 +296,12 @@
 		<img src="/!g/pix/bouquet.gif">
 		<img src="/!g/pix/book3.gif">
 		<img src="/!g/pix/scissors6.gif">
+		<img src="/!g/pix/camera1.gif">
+		<img src="/!g/pix/takepic.gif">
+		<img src="/!g/pix/gameconsole.gif">
+		<img src="/!g/pix/phone.gif">
+		<img src="/!g/pix/mailwings.gif">
+		<img src="/!g/pix/dvd1.gif">
 
 		<h3 id="tiny">tinnier</h3>
 
@@ -828,18 +837,22 @@
 		<img src="/!g/deco/enderspin.gif">
 		<img src="/!g/deco/bee.png">
 		<img src="/!g/deco/EMUOTORI.png">
+		<img src="/!g/gif/splat-gato.gif">
 
 		<h2 id="gif">gifs</h2>
 		<a title="bouncy bubbles" href="https://archive.cinni.net/sites/bouncy-bubbles/" target="_blank"><img src="/!g/gif/hellokittystar.gif"></a>
 		<img src="/!g/gif/sad-seal.gif">
 		<img src="/!g/gif/moobloom-bee.gif">
 		<img src="/!g/gif/jermahell.gif">
+		<img src="/!g/gif/jermachristmas.gif">
 		<img src="/!g/gif/darksoulsskel.gif">
+		<img src="/!g/gif/kaiba.gif">
+		<img src="/!g/gif/holy-moly.gif">
 
 		<br> <!-- if found -->
-		<img src="/!g/gif/kasio2.gif">
-		<img src="/!g/gif/kasio1.gif">
-		<img src="/!g/gif/kasio.gif">
+		<img title="made by me!" src="/!g/gif/kasio2.gif">
+		<img title="made by me!" src="/!g/gif/kasio1.gif">
+		<img title="made by me!" src="/!g/gif/kasio.gif">
 
 		<h2 id="frames">frames</h2>
 
@@ -847,6 +860,8 @@
 		<div class="frame"><img src="/!g/frames/frame1.gif"><br>text<br><img src="/!g/frames/f2.gif"></div>
 		<div class="frame"><img src="/!g/frames/panda1.gif"><br>text<br><img src="/!g/frames/panda2.gif"></div>
 		<div class="frame"><img src="/!g/frames/seal1.gif"><br>text<br><img src="/!g/frames/seal2.gif"></div>
+		<div class="frame"><img src="/!g/frames/hellok2.gif"><br>text<br><img src="/!g/frames/hellok1.gif"></div>
+		<div class="frame"><img src="/!g/frames/hellokpur1.gif"><br>text<br><img src="/!g/frames/hellokpur2.gif"></div>
 
 		<br>
 		<div class="frame"><img src="/!g/frames/ilu.gif"></div>
