collection index page minor fix

--- a/website/collection/index.html
+++ b/website/collection/index.html
@@ -26,9 +26,9 @@ https://coolors.co/fbeaf0-f48286-f04a4f-fedfcf
 	<div id="wrapper">
 		<img src="/!g/deco/bunny2.gif" class="border" style="position:absolute;" width="400px" alt="background">
 		<div class="container">
-			<p class="desc">i like <b>collecting</b> things</p>
+			<p class="desc">a collection of things i like <img src="/!g/pix/cathi.gif" alt=""></p>
 			<ul>
-				<li><a title="WARNING! page contains flashing gifs, while not a ton or fast-paced, i still figured a warning is nice" href="internet-stamps/index.html">internet graphics</a></li>
+				<li><a title="WARNING! page contains flashing gifs, while not a ton or fast-paced, i still figured a warning is nice" href="internet-graphics/index.html">internet graphics</a></li>
 				<li><a href="cats/index.html">cat pics</a></li>
 				<li><a href="mail-stamps/index.html">mail stamps</a></li>
 				<li><a href="stickers/index.html">stickers</a></li>
