new journal log

--- a/website/home.html
+++ b/website/home.html
@@ -132,6 +132,7 @@ feel free to look around for any help you need :) just don't be THAT person and 
 
 		<div id="updates" class="box">
 			<h2>updates</h2>
+			<li>09.apr.24 - new <a href="/journal">journal </a>log: gender</li>
 			<li>07.apr.24 - updated featured section in <a href="/music">music</a></li>
 			<li>03.apr.24 - new pic on <a href="photobook/index.html">photobook</a> + last update to march <a href="scrapbook/2024/index.html#mar">scrapbook</a> + created a <a href="/projects/learning-js/practice.html">practice page</a> for JS + new <a title="drippin's beautiful maze" href="/music/listening-log/2024/spring.html#2">listening log</a></li>
 			<li>29.mar.24 - site is now part of the <a href="https://silly.city" target="_blank" class="outlink">silly.city</a> webring!</li>
