--- a/website/journal/index.html
+++ b/website/journal/index.html
@@ -35,14 +35,11 @@ v3 of journal started on 25.feb.24./ finished on 01.mar.24
 			<img src="/!g/deco/diary.gif">
 			<p>a place where i talk about what's going on in my life and about my site!</p>
 			<small class="sticky">all sticky notes are draggable!</small>
-			<details>
-				<summary>content notes</summary>
-				<p>i don't want to treat this journal as a vent dump, or be overly negative. but i do be having bad times. anything of those topics will have <mark>content warnings</mark> at the start of the entry.</p>
-			</details>
 			<p><a href="credit.html" target="iframe_a">credit page</a></p>
 			<img class="hide" src="/!g/deco/pencil1.gif" style="max-width:100%">
 			<details open>
 				<summary>2024</summary>
+				<a href="2024/04.html" target="iframe_a">april</a>
 				<a href="2024/03.html" target="iframe_a">march</a>
 				<a href="2024/02.html" target="iframe_a">february</a>
 				<a href="2024/01.html" target="iframe_a">january</a>
@@ -63,7 +60,7 @@ v3 of journal started on 25.feb.24./ finished on 01.mar.24
 		</nav>
 
 		<main>
-			<iframe id="journal" src="2024/03.html" name="iframe_a" height="100%" width="100%"></iframe>
+			<iframe id="journal" src="2024/04.html" name="iframe_a" height="100%" width="100%"></iframe>
 		</main>
 	</div>
 
@@ -74,7 +71,7 @@ v3 of journal started on 25.feb.24./ finished on 01.mar.24
 
 	<aside id="memo1" class="memo draggable">
 		<div class="innermemo">
-			<h3 style="margin:10px;">status.cafe</h3>
+			<h2>status.cafe</h2>
 			<!-- start sw-rss-feed code -->
 			<script type="text/javascript" src="status-cafe-feed.js"></script>
 			<script type="text/javascript" src="//feed.surfing-waves.com/js/rss-feed.js"></script>
@@ -126,12 +123,18 @@ v3 of journal started on 25.feb.24./ finished on 01.mar.24
 
 	<aside id="memo4" class="memo draggable">
 		<div class="innermemo">
-			<h3 style="margin:5px;"><img src="/!g/pix/cam-shoot.gif" alt="emoticon"> piclog</h3>
-			<a href="https://piclog.blue/profile.php?id=51" target="iframe_a"><img src="https://piclog.blue/latest.php?id=51" width="100%" style="border-radius: 10px;" alt="piclog"></a>
-			<h3><img src="https://doqmeat.com/!g/pix/eat.gif" width="110" alt=""> moku.blog</h3>
-			<p><a href="https://moku.blog/user/doqmeat" target="_blank"> moku.blog profile</a> → i am a big foodie and so i found this site where you log in your food and you can share recipes and pics! hope it gets a little feed in the future i can put here!</p>
-			<h3><img src="https://doqmeat.com/!g/pix/2ofem.gif" width="70" alt=""> FC2 microblog</h3>
-			<p><a title="will pop up in the iframe :)" href="https://doqmeat.blog.fc2.com" target="iframe_a">doqmeat.blog.fc2</a> → sometimes i have stuff to talk about that wouldn't fit on either status.cafe or my journal...</p>
+			<h2>microblogs</h2>
+			<h3><img src="/!g/pix/cam-shoot.gif" alt="emoticon"> piclog</h3>
+			<a title="piclog profile will open on iframe!" href="https://piclog.blue/profile.php?id=51" target="iframe_a"><img src="https://piclog.blue/latest.php?id=51" width="100%" style="border-radius: 10px;" alt="piclog"></a>
+
+			<h3><img src="/!g/pix/eat.gif" width="110" alt=""> <a href="https://moku.blog/user/doqmeat" target="_blank"> moku.blog</a></h3>
+			<p>i am a big foodie and so i found this site where you log in your food and you can share recipes and pics! hope it gets a little feed in the future i can put here!</p>
+
+			<h3><img src="/!g/pix/2ofem.gif" width="70" alt=""> <a title="will pop up in the iframe :)" href="https://doqmeat.blog.fc2.com" target="iframe_a">doqmeat.blog.fc2</a></h3>
+			<p>sometimes i have stuff to talk about that wouldn't fit on either status.cafe or my journal...</p>
+
+			<h3><img src="/!g/pix/computer.gif"> <a href="https://status.cafe/users/doqmeat" target="_blank">status.cafe</a></h3>
+			<p>mostly for quick updates :3</p>
 		</div>
 	</aside>
 
